# MathUtils

./: .gitignore  CMakeLists.txt  Doxyfile  MANIFEST.in  Makefile  README.md  dev_notes.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_graphics.txt  requirements_testing.txt  setup.py
.github/workflows/: build-and-test.yml
data/example_ply/: annulus.ply  annulus_ascii.ply  bunny.ply  dumbbell.ply  dumbbell_coarse.ply  dumbbell_coarse_ascii.ply  dumbbell_fine.ply  hex_patch.ply  hex_sector.ply  neovius.ply  neovius_coarse.ply  neovius_fine.ply  oblate_000020.ply  oblate_000080.ply  oblate_000320.ply  oblate_001280.ply  oblate_005120.ply  oblate_020480.ply  unit_sphere_000020.ply  unit_sphere_000080.ply  unit_sphere_000320.ply  unit_sphere_001280.ply  unit_sphere_005120.ply  unit_sphere_020480.ply  unit_torus_3_1_raw_000384.ply  unit_torus_3_1_raw_001536.ply  unit_torus_3_1_raw_006144.ply  unit_torus_3_1_raw_024576.ply
data/example_ply_feb_16_26/: annulus_he.ply  dumbbell_coarse_he.ply  dumbbell_fine_he.ply  dumbbell_he.ply  hex_patch_he.ply  hex_sector_he.ply  hex_sector_vf.ply  neovius_coarse_he.ply  neovius_coarse_vf.ply  neovius_fine_he.ply  neovius_fine_vf.ply  neovius_he.ply  neovius_vf.ply  oblate_000020_he.ply  oblate_000080_he.ply  oblate_000320_he.ply  oblate_001280_he.ply  oblate_005120_he.ply  oblate_020480_he.ply  plane_0000006_he.ply  plane_0000024_he.ply  plane_0000096_he.ply  plane_0000200_he.ply  plane_0000384_he.ply  plane_0000772_he.ply  plane_0001536_he.ply  plane_0001566_he.ply  plane_0003144_he.ply  plane_0006144_he.ply  plane_0006252_he.ply  plane_0012598_he.ply  plane_0024576_he.ply  plane_0025268_he.ply  plane_0050634_he.ply  sphere_0000020_he.ply  sphere_0000080_he.ply  sphere_0000320_he.ply  sphere_0000500_he.ply  sphere_0000628_he.ply  sphere_0001232_he.ply  (+34 more)
data/example_ply_feb_21_26/: annulus_he.ply  annulus_vf.ply  bunny.ply  dumbbell_coarse_he.ply  dumbbell_coarse_vf.ply  dumbbell_fine_he.ply  dumbbell_fine_vf.ply  dumbbell_he.ply  dumbbell_ultrafine_ascii_vf.ply  dumbbell_vf.ply  hex_patch_he.ply  hex_patch_vf.ply  hex_sector_he.ply  hex_sector_vf.ply  neovius_coarse_he.ply  neovius_coarse_vf.ply  neovius_fine_he.ply  neovius_fine_vf.ply  neovius_he.ply  neovius_vf.ply  oblate_000020_he.ply  oblate_000080_he.ply  oblate_000320_he.ply  oblate_001280_he.ply  oblate_005120_he.ply  oblate_020480_he.ply  plane_0000006_he.ply  plane_0000024_he.ply  plane_0000096_he.ply  plane_0000200_he.ply  plane_0000384_he.ply  plane_0000772_he.ply  plane_0001536_he.ply  plane_0001566_he.ply  plane_0003144_he.ply  plane_0006144_he.ply  plane_0006252_he.ply  plane_0012598_he.ply  plane_0024576_he.ply  plane_0025268_he.ply  (+47 more)
data/example_ply_feb_23_26/: annulus_he.ply  annulus_vf.ply  dumbbell_coarse_he.ply  dumbbell_coarse_vf.ply  dumbbell_fine_he.ply  dumbbell_fine_vf.ply  dumbbell_he.ply  dumbbell_vf.ply  hex_patch_he.ply  hex_patch_vf.ply  hex_sector_he.ply  hex_sector_vf.ply  neovius_coarse_he.ply  neovius_coarse_vf.ply  neovius_fine_vf.ply  neovius_he.ply  neovius_vf.ply  oblate_000020_he.ply  oblate_000080_he.ply  oblate_000320_he.ply  oblate_001280_he.ply  oblate_005120_he.ply  oblate_020480_he.ply  plane_0000006_he.ply  plane_0000024_he.ply  plane_0000096_he.ply  plane_0000200_he.ply  plane_0000384_he.ply  plane_0000772_he.ply  plane_0001536_he.ply  plane_0001566_he.ply  plane_0003144_he.ply  plane_0006144_he.ply  plane_0006252_he.ply  plane_0012598_he.ply  plane_0024576_he.ply  plane_0025268_he.ply  sphere_0000020_he.ply  sphere_0000080_he.ply  sphere_0000320_he.ply  (+39 more)
data/example_ply_feb_28_26/: annulus_he.ply  annulus_vf.ply  dumbbell_coarse_he.ply  dumbbell_coarse_vf.ply  dumbbell_fine_he.ply  dumbbell_fine_vf.ply  dumbbell_he.ply  dumbbell_vf.ply  hex_patch_he.ply  hex_patch_vf.ply  hex_sector_he.ply  hex_sector_vf.ply  neovius_coarse_he.ply  neovius_coarse_vf.ply  neovius_he.ply  neovius_vf.ply  oblate_000020_he.ply  oblate_000080_he.ply  oblate_000320_he.ply  oblate_001280_he.ply  oblate_005120_he.ply  oblate_020480_he.ply  unit_sphere_000020_he.ply  unit_sphere_000020_vf.ply  unit_sphere_000080_he.ply  unit_sphere_000080_vf.ply  unit_sphere_000320_he.ply  unit_sphere_000320_vf.ply  unit_sphere_001280_he.ply  unit_sphere_001280_vf.ply  unit_sphere_005120_he.ply  unit_sphere_005120_vf.ply  unit_sphere_020480_he.ply  unit_sphere_020480_vf.ply  unit_torus_3_1_raw_000384_he.ply  unit_torus_3_1_raw_001536_he.ply  unit_torus_3_1_raw_006144_he.ply  unit_torus_3_1_raw_024576_he.ply  vutukuri_vesicle_005120_he.ply
data/example_ply_jan_15_26/: annulus_he.ply  annulus_vf.ply  dumbbell_coarse_vf.ply  dumbbell_fine_he.ply  dumbbell_fine_vf.ply  dumbbell_he.ply  dumbbell_ultrafine_vf.ply  dumbbell_vf.ply  hex_patch_he.ply  hex_sector_he.ply  neovius_coarse_he.ply  neovius_fine_he.ply  neovius_he.ply  oblate_000020_he.ply  oblate_000080_he.ply  oblate_000320_he.ply  oblate_001280_he.ply  oblate_005120_he.ply  oblate_020480_he.ply  plane_0000006_he.ply  plane_0000024_he.ply  plane_0000096_he.ply  plane_0000200_he.ply  plane_0000384_he.ply  plane_0000772_he.ply  plane_0001536_he.ply  plane_0001566_he.ply  plane_0003144_he.ply  plane_0006144_he.ply  plane_0006252_he.ply  plane_0012598_he.ply  plane_0024576_he.ply  plane_0025268_he.ply  plane_0050634_he.ply  (+43 more)
docs/: doxygen-formulas-macros.tex  doxygen-mathjax-header.html  mainpage.md
mathutils/: __init__.py
notebooks/: findiff_tests.ipynb  half_edge_mesh_operation_figs.ipynb  half_edge_mesh_tests.ipynb  mesh_tests.ipynb  mesh_tests.py  plot.ipynb  plot.py  random_tests.ipynb  re_ply.ipynb  run_spherical_harmonics_tests.py  slider2d.ipynb  special_funs.py  special_tests.ipynb  spherical_harmonic_fit_test.py  spherical_harmonics_tests.py  testing.py
pymathutils/: __init__.py  findiff.py  jit_funs.py
scratch/: back_makefile_back  bindings_cpp.back  dumbbell_coarse_he.ply  funs_back.hpp  half_edge_figs.py  pymathutils__init___py.back  pyproject_toml.back  scratch.hpp  scratch.py  setup_py.back  test_README.md  test_init.py  test_lookup_tables.hpp
scripts/: generate_lookup_tables.py
(+197 files in other folders)
