[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "pymathutils"
version = "0.1.24"
description = "Fast mathematical utilities"
authors = [{ name = "wlough", email = "wilson.lough@colorado.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "numba", "sympy", "scipy"]
keywords = ["mathematics", "scientific-computing", "numerical-methods"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/wlough/MathUtils"
Repository = "https://github.com/wlough/MathUtils"
Issues = "https://github.com/wlough/MathUtils/issues"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]


[tool.scikit-build]
# ensures the Python package is included alongside the extension
wheel.packages = ["src/pymathutils"]
# Pin the backend minimum to lock defaults
# minimum-version = "0.10"
# declare CMake/Ninja minimums so skbuild will fetch wheels if needed
# cmake.minimum-version = "3.15"
# ninja.minimum-version = "1.10"
