[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "pymathutils"
version = "0.1.25"
description = "Mathematical utilities"
authors = [{ name = "wlough", email = "wilson.lough@colorado.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "numba"]
keywords = ["mathematics", "scientific-computing", "numerical-methods"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/wlough/MathUtils"
Repository = "https://github.com/wlough/MathUtils"
Issues = "https://github.com/wlough/MathUtils/issues"

[project.optional-dependencies]
# dev = ["pytest", "build", "twine", "scipy", "sympy", "matplotlib"]
dev = [
    "black",
    "build",
    "ipykernel",
    "jedi",
    "jupyterlab",
    "matplotlib",
    "mccabe",
    "notebook",
    "pycodestyle",
    "pytest",
    "python-lsp-server",
    "pyvista[all]",
    # "mayavi==4.8.1",
    # "PyQt5==5.15.10",
    # "vtk==9.2.6",
    # "mayavi",
    "PyQt5",
    "vtk",
    "scipy",
    "sympy",
    "twine",
]
# graphics = ["pyvista[trame]", "trame", "trame-vuetify", "trame-vtk"]

[tool.scikit-build]
wheel.packages = ["src/pymathutils"]
sdist.include = [
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CMakeLists.txt",
    "src/pymathutils/**",
    "src/cpp/**",
    "include/mathutils/**",
]
sdist.exclude = [
    ".github",
    "notebooks",
    "scratch",
    "scripts",
    ".gitignore",
    "dev_notes.md",
    "Doxyfile",
    "Makefile",
    "requirements_testing.txt",
]
# Pin the backend minimum to lock defaults
minimum-version = "0.1.24"
# declare CMake/Ninja minimums so skbuild will fetch wheels if needed
# cmake.minimum-version = "3.15"
# ninja.minimum-version = "1.10"
